--- a/public/css/app.css
+++ b/public/css/app.css
@@ -175,6 +175,7 @@ label{
     width: 290px;
     margin-left: auto;
     margin-right: auto;
+    color: #fff;
 }
 .forgot-link{
     color:#fff;
@@ -213,6 +214,18 @@ label{
     font-size:52px;
     text-align: center;
     margin-bottom: 30px;
+}
+
+.btn-design-remove{
+    background: transparent;
+    border:none;
+    color: #fff;
+    cursor: pointer;
+    font-size:16px;
+}
+
+.btn-design-remove:focus{
+    outline:none;
 }
 @media screen and (max-width: 500px) {
     .menu-list{
